# levoit

./: .gitignore  README.md
components/: README.md
components/levoit/: levoit.cpp  levoit.h  types.h  vital_commands.cpp  vital_status.cpp
components/levoit_audio/: CMakeLists.txt  README.md  __init__.py  levoit_audio.cpp  levoit_audio.h
components/levoit_audio/select/: __init__.py
components/philips/: README.md  __init__.py  philips.cpp  philips.h
devices/: README.md
devices/levoit-core300s/: README.md
devices/levoit-core400s/: README.md  common.yaml  levoit-core400s-builder-c3.yaml  levoit-core400s-builder-s3.yaml  levoit-core400s-builder.yaml
devices/levoit-core600s/: README.md
devices/levoit-everest-air/: README.md  common.yaml  levoit-everest-air-c3_dev.yaml  levoit-everest-air.yaml  levoit-everest-air_dev.yaml
devices/levoit-lv131/: README.md  levoit-lv131-c3.yaml
devices/levoit-lv131s/: README.md
devices/levoit-mini/: README.md
devices/levoit-sprout/: README.md  build_assets.py  common.yaml  flash_assets.py  levoit-sprout.yaml  levoit-sprout_dev.yaml  partitions_4mb.csv  partitions_custom.csv
devices/levoit-vital100s/: README.md
devices/levoit-vital200s/: README.md  common.yaml  levoit-vital200s-builder-c3.yaml  levoit-vital200s-builder-s3.yaml  levoit-vital200s-builder.yaml
devices/philips-600-series/: README.md  common.yaml  philips-ac0650-c3_dev.yaml  philips-ac0650.yaml  philips-ac0650_dev.yaml  philips-ac0651-c3_dev.yaml  secrets copy.yaml
logic2/philips_uart/: HighLevelAnalyzer.py  README.md  extension.json
(+33 files in other folders)
